# macos-llm-file-cleanup

./: .gitignore  AGENTS.md  Brewfile  README.md  SUPPORTED_EXTENSIONS.txt  pip_requirements.txt  pyproject.toml  run_file_cleanup.py
docs/: CHANGELOG.md  ROADMAP.md  SUPPORTED_EXTENSIONS.md  TODO.md
macos_llm_file_cleanup/: __init__.py  __main__.py  cli.py  config.py  llm.py  main.py  organizer.py  renamer.py  scanner.py
macos_llm_file_cleanup/plugins/: __init__.py  audio_plugin.py  base.py  code_plugin.py  csv_plugin.py  document_plugin.py  docx_plugin.py  generic.py  image_plugin.py  mdls_utils.py  odt_plugin.py  pdf.py  presentation_plugin.py  spreadsheet_plugin.py  text.py  vector_image_plugin.py  video_plugin.py
rename_n_sort/: cli.py  config.py  llm.py  llm_engine.py  llm_parsers.py  llm_prompts.py  llm_utils.py  moondream2_caption.py  organizer.py
rename_n_sort/plugins/: __init__.py  document_plugin.py  image_plugin.py  odt_plugin.py  pdf.py  presentation_plugin.py  spreadsheet_plugin.py  (+1 more)
tests/: conftest.py  generate_test_images.py  run_pyflakes.sh  run_smoke_cli.sh  test_dummy_llm.py  test_extract_test_files.py  test_keep_original_decision.py  test_keep_original_heuristics.py  test_llm_backend_selection.py  test_llm_engine.py  test_llm_explain.py  test_llm_parsers_strict.py  test_llm_prompts_shared.py  test_llm_reliability.py  test_model_selection.py  test_ocr_sample_image.py  test_ollama_chat_llm.py  test_one_by_one.py  test_plugin_registry.py  test_renamer.py  test_required_deps.py  test_target_root_default.py  test_version_sync.py
(+12 files in other folders)
